force-app/main/default/objects/Contact/fields/End_of_Year_Gift__c.field-meta.xml
<CustomField>
    <fullName>End_of_Year_Gift__c</fullName>
    <label>End of Year Gift</label>
    <description>Indicates the contact gave an end-of-year gift. Set by staff to flag donors for year-end stewardship and reporting.</description>
    <inlineHelpText>Check if this contact gave an end-of-year gift.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>