force-app/main/default/objects/Contact/fields/Preferred_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication__c</fullName>
    <label>Preferred Communication</label>
    <description>Captures the contact's preferred communication channel for outreach. Used by staff to tailor fundraising, event, and advocacy communications.</description>
    <inlineHelpText>Select how this contact prefers to be reached: Email, Phone, or Mail.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>