force-app/main/default/objects/Contact/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <label>Preferred Communication Method</label>
    <description>Tracks how each constituent prefers to be contacted. Used by staff to personalize outreach across fundraising, events, and advocacy communications.</description>
    <inlineHelpText>Select the communication method this contact prefers. Defaults to Email if not specified.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>